Fix alignment and mobile design

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,3 @@
-
-@media(max-width: 700px) {
-    .buttonContainer {
-        flex-direction: column;
-        align-items: center;
-        height: 200px;
-    }
-}
-
 body {
     background-color: lightgray;
 }
@@ -23,18 +14,20 @@ main {
 }
 
 .buttonContainer {
-    margin-top: 20px;
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
-    width: 50%;
-}
+    align-items: center;
+    height: 200px;
+        margin-top: 20px;
+    }
 
 button {
     width: 20%;
-    min-width: 100px;
+    min-width: 150px;
     height: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
     font-size: x-large;
     font-weight: bold;
     border: 3px solid black;
@@ -102,9 +95,12 @@ span p {
 
 .resultContainer {
     width: 30%; 
-    height: 100px;    
+    height: 150px;    
     margin-top: 60px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .resultTitle {
@@ -124,4 +120,13 @@ span p {
     align-items: center;
     font-size: large;
     padding: 5px;
+}
+
+@media(min-width: 700px) {
+    .buttonContainer {
+        display: flex;
+        flex-direction: row;
+        width: 50%;
+        height: auto;
+    }
 }
